<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>gov.dhs.cisa.ctm</groupId>
	<artifactId>taxii2</artifactId>
	<version>0.3.5</version>

	<dependencies>
		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.8.6</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<properties>
        	<harnessArgLine></harnessArgLine>
	</properties>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
		        <plugin>
		            <artifactId>maven-surefire-plugin</artifactId>
		            <configuration>
		                <argLine>-Xmx1024m -XX:MaxPermSize=256m ${surefireArgLine}</argLine>
		                <includes>
		                    <include>**/*Test.java</include>
		                </includes>
		                <forkCount>0</forkCount>
		            </configuration>
		        </plugin>
			<plugin>
			    <groupId>org.apache.maven.plugins</groupId>
			    <artifactId>maven-surefire-plugin</artifactId>
			    <version>2.22.2</version>
			    <configuration>
			        <argLine>${harnessArgLine}  @{argLine} </argLine>
			    </configuration>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.7.9</version>
				<executions>
					<execution>
						<id>pre-unit-test</id>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>post-unit-test</id>
						<phase>test</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<!-- <distributionManagement> <repository> <id>central</id> <name>artifactory-0-releases</name> 
		<url>http://artifactory.apps.ecicd.dso.ncps.us-cert.gov/artifactory/libs-release</url> 
		</repository> </distributionManagement> -->
</project>
